--- a/lab/lab07/LazyInstagram/app/build.gradle
+++ b/lab/lab07/LazyInstagram/app/build.gradle
@@ -24,17 +24,24 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'//Gson
+
+
+
+
+
+
+
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'//Gson
 
-    compile 'com.android.support:recyclerview-v7:26.1.0' //recyclerview
+    compile 'com.android.support:recyclerview-v7:26.1.0'//recyclerview
 
     compile 'com.github.bumptech.glide:glide:4.1.1'//Glide show picture
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
 
     compile 'com.android.support:appcompat-v7:26.1.0'//แก้ให้เป็นversion เดียวกัน
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
 }
