--- a/lab/lab09/moneyflow/app/build.gradle
+++ b/lab/lab09/moneyflow/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "kmitl.lab09.supanat.moneyflow"
         minSdkVersion 15
@@ -25,9 +25,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'android.arch.persistence.room:runtime:1.0.0-rc1'
+    implementation "android.arch.persistence.room:runtime:1.0.0-rc1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-rc1"
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-rc1'
+
 }
